# ydl-podcast

./: Dockerfile  Jenkinsfile  LICENSE  README.md  config.sample.yaml  config.yaml.sample  pyproject.toml  requirements.txt  setup.py  ydl_podcast.py
.github/workflows/: tag-versions.yml
src/ydl_podcast/: __init__.py  __main__.py
src/ydl_podcast/templates/: episode_nfo.py  feed.py  show_nfo.py  style.py
tests/: conftest.py  test_cleanup.py  test_config.py  test_convert_thumbnail.py  test_download.py  test_flatten_entries.py  test_get_metadata.py  test_get_ydl_module.py  test_helpers.py  test_metadata.py  test_process_options.py  test_silence_ydl.py  test_write_nfo.py  test_write_xml.py
ydl_podcast/: __init__.py  __main__.py  template.py
ydl_podcast/templates/: feed.py  index.py  style.py
