[project]
name = "ydl-podcast"
version = "1.9.10"
description = "A simple tool to generate Podcast-like RSS feeds from youtube (or other youtube-dl supported services) channels, using youtube-dl/yt-dlp"
license = { text = "MIT" }
authors = [
    { name = "nbr23", email = "max@23.tf" }
]
readme = "README.md"
requires-python = ">=3.9"
keywords = ["podcast", "youtube-dl"]
dependencies = [
    "yt-dlp>=2025.6.30",
    "PyYAML==6.0.2",
    "Jinja2>=3.1.2",
    "MarkupSafe>=2.1.1",
    "Pillow==10.4.0",
]

[project.optional-dependencies]
yt-dlp = ["yt-dlp>=2025.6.25"]
youtube-dl = ["youtube-dl"]

[project.urls]
homepage = "https://github.com/nbr23/ydl-podcast"
repository = "https://github.com/nbr23/ydl-podcast"

[project.scripts]
ydl-podcast = "ydl_podcast.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ydl_podcast"]
